# prospectorGoogleDrive

./: .gitignore  _quarto.yml  great-docs.yml  index.qmd  pyproject.toml  spack.yaml
.github/workflows/: docs.yml
logs/: gd-prospector-18708112.err  gd-prospector-18708112.out  gd-prospector-18711784.err  gd-prospector-18711784.out  gd-prospector-19422836.err  gd-prospector-19422836.out  gd-prospector-9519869.err  gd-prospector-9519988.err  gd-prospector-9519988.out  run_script_test-20484307.err
notebooks/: cli.qmd  parse_logs.qmd
outputs/2026-05-01/00-32-54/.hydra/: hydra.yaml  overrides.yaml
outputs/2026-05-01/00-45-30/.hydra/: hydra.yaml
outputs/2026-05-01/00-55-13/.hydra/: config.yaml  hydra.yaml
outputs/2026-05-01/08-57-11/.hydra/: hydra.yaml
outputs/2026-05-01/09-00-05/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-02/23-22-46/.hydra/: hydra.yaml
outputs/2026-06-02/23-33-08/.hydra/: hydra.yaml
outputs/2026-06-02/23-47-20/.hydra/: config.yaml  hydra.yaml  overrides.yaml
scripts/: run_prospector.sh
src/google_drive_prospector/: __init__.py  cli.py
src/google_drive_prospector/conf/: config.yaml
user_guide/notebooks/: cli.md  parse_logs.md
