[project]
name = "google-drive-prospector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TinasheMTapera", email = "tinashemtapera@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
google-drive-prospector = "google_drive_prospector:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "great-docs>=0.9",
]
