[project]
name = "google-drive-prospector"
version = "0.1.0"
description = "A tool for syncing Google Drive files to the Gold Mine."
readme = "README.md"
authors = [
    { name = "TinasheMTapera", email = "tinashemtapera@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
]

[project.scripts]
google-drive-prospector = "google_drive_prospector.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "great-docs>=0.9",
]
